@@ -24,7 +24,7 @@
         <mockito.version>2.23.0</mockito.version>
         <tiles-maven-plugin.version>2.12</tiles-maven-plugin.version>
         <kemitix-maven-tiles.version>1.3.1</kemitix-maven-tiles.version>
-        <kemitix-checkstyle.version>4.0.1</kemitix-checkstyle.version>
+        <kemitix-checkstyle.version>5.2.0</kemitix-checkstyle.version>
     </properties>
 
     <dependencies>
