@@ -4,6 +4,7 @@ CHANGELOG
 0.4.1
 -----
 
+* Bump kemitix-checkstyle-ruleset from 4.0.1 to 5.2.0 (#29)
 * Bump lombok from 1.16.20 to 1.18.2 (#23)
 * Bump assertj-core from 3.9.1 to 3.11.1 (#22)
 * Bump mockito-core from 2.16.0 to 2.23.0 (#21)(#26)
